Use cptCode.Modifier.Modifier for the string, change cpt and pqrs keys and combine into single db, remove pqrsdatabase from redisAppDataConnection

--- a/YellowstonePathology/UI/CodeSelection.xaml
+++ b/YellowstonePathology/UI/CodeSelection.xaml
@@ -36,7 +36,7 @@
 						</GridViewColumn.CellTemplate>
 					</GridViewColumn>
 					<GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Code}" Header="Code" Width="100"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Modifier}" Header="Modifier" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=CptCode.Modifier.Modifier}" Header="Modifier" Width="100"/>
                 </GridView>
 			</ListView.View>
 		</ListView>
