--- a/YellowstonePathology/UI/Test/IgHMFABByFishResultPage.xaml
+++ b/YellowstonePathology/UI/Test/IgHMFABByFishResultPage.xaml
@@ -105,11 +105,11 @@
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Interpretation:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold">References:</TextBlock>
+                    <!--<TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold">References:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
                     <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" FontWeight="Bold">Method:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                    <TextBox Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>-->
 
                     <TextBlock Grid.Column="0" Grid.Row="13" Margin="2,2,2,2" FontWeight="Bold">Probe Set Details:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="14" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProbeSetDetail}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
