--- a/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
+++ b/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
@@ -72,6 +72,11 @@
 				</Grid.RowDefinitions>
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,5">
+					<Hyperlink Click="HyperLinkSimulateScan_Click">Simulate Scan</Hyperlink>
+                </TextBlock>
+
                 <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
                 </TextBlock>
