--- a/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
+++ b/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
@@ -87,6 +87,10 @@
 					<Hyperlink Click="HyperLinkSimulateScan_Click">Simulate Scan</Hyperlink>
                 </TextBlock>
 
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
+					<Hyperlink Click="HyperLinkSendToBozeman_Click">Send To Bozeman</Hyperlink>
+                </TextBlock>
+
                 <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
                 </TextBlock>
