--- a/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
+++ b/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
@@ -23,6 +23,7 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=MasterAccessionNo}" FontSize="14" FontWeight="Bold" Width="100"></TextBlock>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=CurrentLocation}" FontSize="14" FontWeight="Bold" />
 
                     <Grid Grid.Column="0" Grid.Row="1">
                         <Grid.RowDefinitions>
@@ -42,8 +43,8 @@
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn DisplayMemberBinding="{Binding Path=ScanDate, Converter={StaticResource MilitaryDateTimeConverterV2}}" Header="Date" Width="120"/>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Location}" Header="Location" Width="100"/>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=ScannedBy}" Header="Scanned By" Width="200"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=Location}" Header="Location" Width="150"/>
+                                <GridViewColumn DisplayMemberBinding="{Binding Path=ScannedBy}" Header="Scanned By" Width="120"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -63,7 +64,17 @@
 		</Grid.RowDefinitions>
 
 		<Border Grid.Row="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="{Binding Path=PageHeaderText}" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>
+
+        <Button Grid.Column="0" Grid.Row="0" Content="●" Background="Transparent" Foreground="Black" Click="HyperLinkSimulateScan_Click" HorizontalAlignment="Left" VerticalAlignment="Center"
+                            FontFamily="Tw Cen MT Condensed" Margin="5,5,2,2" Width="20" Height="20" BorderBrush="Transparent" BorderThickness="0">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter Content="{TemplateBinding Content}"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="{Binding Path=PageHeaderText}" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>
 
 		<Grid Grid.Row="1" Margin="5">
 			<Grid.ColumnDefinitions>
@@ -90,10 +101,6 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkSimulateScan_Click">Simulate Scan</Hyperlink>
-                </TextBlock>
-
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkSendToBozeman_Click">Send To Bozeman</Hyperlink>
                 </TextBlock>
 
@@ -119,12 +126,6 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2">Scan Intent</TextBlock>
-                    <ComboBox Name="ComboBoxIntent" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" IsEditable="True" Text="{Binding Path=ScanIntent}" HorizontalAlignment="Stretch" BorderBrush="LightGray" BorderThickness="1">
-                        <ComboBoxItem>Receive</ComboBoxItem>
-                        <ComboBoxItem>Send Out</ComboBoxItem>
-                    </ComboBox>
-                    
                     <TreeView Name="TreeViewVantageSlides" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding Path=VantageSlideCollection}"
 							ItemTemplate="{StaticResource DataTemplateVantageSlide}" Margin="2,10,2,2" BorderThickness="1">
                     </TreeView>
