--- a/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
+++ b/YellowstonePathology/UI/Test/SlideTrackingResultPage.xaml
@@ -22,8 +22,8 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=MasterAccessionNo}" FontSize="14" FontWeight="Bold" Width="100"></TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=CurrentLocation}" FontSize="14" FontWeight="Bold" />
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=VantageSlide.MasterAccessionNo}" FontSize="14" FontWeight="Bold" Width="100"></TextBlock>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=VantageSlide.CurrentLocation}" FontSize="14" FontWeight="Bold" />
 
                     <Grid Grid.Column="0" Grid.Row="1">
                         <Grid.RowDefinitions>
@@ -32,14 +32,17 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
-                        
+
                         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=VantageBarcode.ReportNo}" HorizontalAlignment="Left" />
                         <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=VantageBarcode.Specimen}" HorizontalAlignment="Left" />
                         <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=VantageBarcode.Block}" HorizontalAlignment="Left" />
                         <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=VantageBarcode.Slide}" HorizontalAlignment="Left" />
                     </Grid>
 
-                    <ListView Name="ListViewSlideScans"  Grid.Column="3" Grid.Row="1" Margin="3" ItemsSource="{Binding Path=SlideScans}">
+
+                    <Border BorderBrush="Transparent" BorderThickness="0" Grid.Column="3" Grid.Row="1" Background="{Binding Path=ScanStatusColor}"></Border>
+
+                    <ListView Name="ListViewSlideScans" Grid.Column="3" Grid.Row="1" Margin="3" ItemsSource="{Binding Path=VantageSlide.SlideScans}" Background="Transparent">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn DisplayMemberBinding="{Binding Path=ScanDate, Converter={StaticResource MilitaryDateTimeConverterV2}}" Header="Date" Width="120"/>
@@ -84,7 +87,7 @@
 
 			<Border Grid.Row="0" Grid.Column="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 
-			<Grid Grid.Column="0" Margin="10" Width="120">
+			<Grid Grid.Column="0" Margin="10" Width="140">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
@@ -101,7 +104,11 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkSendToBozeman_Click">Send To Bozeman</Hyperlink>
+					<Hyperlink Click="HyperLinkSendToBozeman_Click">Set Location To Bozeman</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
+					<Hyperlink Click="HyperLinkSendToBillings_Click">Set Location To Billings</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
@@ -126,7 +133,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TreeView Name="TreeViewVantageSlides" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding Path=VantageSlideCollection}"
+                    <TreeView Name="TreeViewVantageSlides" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" ItemsSource="{Binding Path=VantageSlideViewCollection}"
 							ItemTemplate="{StaticResource DataTemplateVantageSlide}" Margin="2,10,2,2" BorderThickness="1">
                     </TreeView>
                 </Grid>
