--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -153,10 +153,10 @@
 						<TextBlock Margin="2,0,0,0">Flow</TextBlock>
 					</StackPanel>
 				</Button>                    
-				<Button Click="ToolBarButtonLabWorkspace_Click" ToolTip="Lab Workspace" Margin="2,0,2,0">
+				<Button Click="ToolBarButtonLoginWorkspace_Click" ToolTip="Login Workspace" Margin="2,0,2,0">
 						<StackPanel Orientation="Horizontal">
 							<Image Source="/Resources/Lab.ico"></Image>
-							<TextBlock Margin="2,0,0,0">Lab</TextBlock>
+							<TextBlock Margin="2,0,0,0">Login</TextBlock>
 						</StackPanel>
 				</Button>
                 <Button Click="ToolBarButtonCytologyWorkspace_Click" ToolTip="Cytology Workspace" Margin="2,0,2,0">
