--- a/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Surgical/ProspectiveReviewResultPage.xaml
@@ -94,6 +94,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>					
 				</Grid.RowDefinitions>
 
@@ -131,7 +132,11 @@
                     <Hyperlink Click="HyperLinkAddDrMorrison_Click">Dr. Morrison</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0" VerticalAlignment="Bottom">                    
+                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkAddDrSmirnow_Click">Dr. Smirnow</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="11" Margin="5,3,0,0" VerticalAlignment="Bottom">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
                 </TextBlock>
 
