--- a/YellowstonePathology/UI/Login/Receiving/ReviewClientOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/ReviewClientOrderPage.xaml
@@ -157,7 +157,8 @@
                         <GridViewColumn DisplayMemberBinding="{Binding Path=OrderStatus}" Header="Status" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PLastName}" Header="Last Name" Width="110"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PFirstName}" Header="First Name" Width="110"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding Path=OrderDate, Converter={StaticResource ShortDateConverter}}" Header="Order Date" Width="150"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=OrderTime, Converter={StaticResource ShortDateTimeConverter}}" Header="Order Date" Width="150"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Accessioned}" Header="Accessioned" Width="110"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=OrderedBy}" Header="Ordered By" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=OrderType}" Header="Order Type" Width="100"/>
                     </GridView>
