--- a/YellowstonePathology/UI/Surgical/StainStatusDialog.xaml
+++ b/YellowstonePathology/UI/Surgical/StainStatusDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Surgical"
         mc:Ignorable="d"
-        Title="Stain Status" Width="800" Height="350" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+        Title="Stain Status" Width="1000" Height="350" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -16,10 +16,11 @@
             <RowDefinition Height ="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView Name="ListViewTestOrders" Grid.Column="0" Grid.Row="0" ItemsSource="{Binding Path=TestOrderStatusViewCollection}" Width="Auto">
+        <ListView Name="ListViewTestOrders" Grid.Column="0" Grid.Row="0" ItemsSource="{Binding Path=TestOrderStatusViewCollection}" Width="Auto" Margin="5,5,5,5">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=SlideOrderId}" Header="Stain Order Id" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=SlideOrderId}" Header="Slide" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Pathologist}" Header="Pathologist" Width="100"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=TestName}" Header="Test Name" Width="250"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=OrderTime, Converter={StaticResource MilitaryDateTimeConverterV2}}" Header="Ordered" Width="120"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=TestStatus}" Header="Status" Width="150"/>
