--- a/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
@@ -32,96 +32,136 @@
 
             <Grid Name="GridLeftNav"  Grid.Column="0" Margin="10" Width="180">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>                    
-                    <RowDefinition Height="Auto"></RowDefinition>                                 
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="20"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="20"></RowDefinition>                                        
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="20"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>                    
-                    <RowDefinition Height="20"></RowDefinition>                    
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="20"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>                    
-                    <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>                               
+                <Button Name="ButtonProviderLookup" Margin="2,2,2,2" Grid.Column="0" Grid.Row="0" Click="HyperLinkShowProviderLookup_Click">Provider Lookup</Button>
 
-                <Button Name="ButtonProviderLookup" Margin="2,2,2,2" Grid.Column="0" Grid.Row="1" Click="HyperLinkShowProviderLookup_Click">Provider Lookup</Button>
+                <Expander Name="ExpanderOptions" Grid.Row="1" Header="Options" Expanded="ExpanderOptions_Expanded">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>                    
+                            <RowDefinition Height="Auto"></RowDefinition>                                 
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="20"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="20"></RowDefinition>                                        
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="20"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>                    
+                            <RowDefinition Height="20"></RowDefinition>                    
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="20"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>                    
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
 
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkSetDistribution_Click">Set Distribution</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkSetDistribution_Click">Set Distribution</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddCopyTo_Click">Add Copy To</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkEditDistribution_Click">Edit Distribution</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkDeleteDistribution_Click">Delete Distribution</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkAddCopyTo_Click">Add Copy To</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkEditDistribution_Click">Edit Distribution</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
+                            <Hyperlink Click="HyperLinkDeleteDistribution_Click">Delete Distribution</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkPublish_Click">Publish</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,5">
+                            <Hyperlink Click="HyperLinkPublish_Click">Publish</Hyperlink>
+                        </TextBlock>
                 
-                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkOpenDocumentFolder_Click">Open Document Folder</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,5">
+                            <Hyperlink Click="HyperLinkOpenDocumentFolder_Click">Open Document Folder</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkPhysicianNotFound_Click">Not Found</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,5">
+                            <Hyperlink Click="HyperLinkPhysicianNotFound_Click">Not Found</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="12" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Schedule Distribution</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkScheduleDistributionImmediate_Click">Immediate</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="14" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkScheduleDistribution15Minute_Click">15 Minutes</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="12" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Schedule Distribution</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkScheduleDistributionImmediate_Click">Immediate</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="14" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkScheduleDistribution15Minute_Click">15 Minutes</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="16" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkUnScheduleDistribution_Click">Unschedule</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="16" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkUnScheduleDistribution_Click">Unschedule</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="18" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Add Distribution</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="19" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddMTDOHDistribution_Click">MTDOH</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="20" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddWYDOHDistribution_Click">WYDOH</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="21" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddOPNDistribution_Click">OPN</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="22" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddFaxDistribution_Click">Fax</Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="23" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddPrintDistribution_Click">Print</Hyperlink>
-                </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="18" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Add Distribution</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="19" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkAddMTDOHDistribution_Click">MTDOH</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="20" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkAddWYDOHDistribution_Click">WYDOH</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="21" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkAddOPNDistribution_Click">OPN</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="22" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkAddFaxDistribution_Click">Fax</Hyperlink>
+                        </TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="23" Margin="5,3,0,0">
+                            <Hyperlink Click="HyperLinkAddPrintDistribution_Click">Print</Hyperlink>
+                        </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="24" Margin="5,3,0,0" VerticalAlignment="Bottom">
-                    <Hyperlink Click="HyperLinkAddComplete_Click">Complete</Hyperlink>
+                        <TextBlock Grid.Column="0" Grid.Row="24" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                            <Hyperlink Click="HyperLinkAddComplete_Click">Complete</Hyperlink>
                 </TextBlock>
+                    </Grid>
+                </Expander>
 
+                <Expander Name="ExpanderMore" Grid.Row="2" Header="More" Expanded="ExpanderMore_Expanded">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        
+                        <TextBlock Grid.Row="0" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                           <Hyperlink Click="HyperLinkShowHl7Result_Click">Show HL7 Result</Hyperlink>
+                        </TextBlock>
+                        
+                        <TextBlock Grid.Row="1" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                           <Hyperlink Click="HyperLinkSendHL7ResultTest_Click">Send HL7 Result Test</Hyperlink>
+                        </TextBlock>
+
+                        <TextBlock Grid.Row="2" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                           <Hyperlink Click="HyperLinkSendHL7StatusMessage_Click">Send HL7 Status Message</Hyperlink>
+                        </TextBlock>
+
+                        <TextBlock Grid.Row="3" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                           <Hyperlink Click="HyperLinkSendHL7Result_Click">Send HL7 Result</Hyperlink>
+                        </TextBlock>
+
+                        <TextBlock Grid.Row="4" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                           <Hyperlink Click="HyperLinkSendHL7Order_Click">Send HL7 Order</Hyperlink>
+                        </TextBlock>
+                    </Grid>
+                </Expander>
             </Grid>
             
             <Grid Grid.Column="1" Margin="5">
